try to fix custom.css

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/assets/css/custom.css">
-<!--<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">-->
+<!--<link rel="stylesheet" href="/assets/css/custom.css">-->
+<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
