--- a/_layouts/categories_work.html
+++ b/_layouts/categories_work.html
@@ -10,7 +10,7 @@ layout: archive
     {% if cat_tags != empty %}
     <li>
         <a href="#{{ tag[0] | slugify }}">
-            <strong>{{ tag[0] }}</strong> 
+            <strong>{{ tag[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
         </a>
     </li>
     {% endif %}
